@@ -1,0 +1,7 @@
+This is a list of people who have helped me working on this CGI
+library.
+
+Mikko Torni <mtorni@mail.freenet.hut.fi>
+
+	- Cookie support
+	- Bugfixes and improvement
