@@ -1,5 +1,5 @@
 .\" cgi - Common Gateway Interface
-.\" Copyright (c) 1998  Martin Schulze <joey@infodrom.north.de>
+.\" Copyright (c) 1998,9 by Martin Schulze <joey@infodrom.north.de>
 .\" 
 .\" This program is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
@@ -15,7 +15,7 @@
 .\" along with this program; if not, write to the Free Software
 .\" Foundation, Inc.,59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 .\"
-.TH cgi 5 "15 February 1998" "Debian GNU/Linux" "Programmer's Manual"
+.TH cgi 5 "14 August 1999" "Debian GNU/Linux" "Programmer's Manual"
 .SH NAME
 cgi \- Common Gateway Interface
 
@@ -54,7 +54,7 @@ The email address of the user issuing the information request.  This
 is not supported by most browsers.
 .TP
 .B HTTP_REFERER
-Reflects the URL from which tis cgi program was accessed.
+Reflects the URL from which tis CGI program was accessed.
 .TP
 .B HTTP_USER_AGENT
 The name, version and libraries of the browser making the request.
@@ -62,7 +62,7 @@ This information can be used to determine if the browser is capable of
 graphics and is able to display frames and tables.
 .TP
 .B PATH_INFO
-This shows extra information that was passed to the cgi program via
+This shows extra information that was passed to the CGI program via
 command line.  Normally it's empty or non-existant.
 .TP
 .B PATH_TRANSLATED
@@ -70,7 +70,7 @@ The translated path on the local filesystem.
 .TP
 .B QUERY_STRING
 This variable refers to additional arguments that were appended to the
-cgi programm - normally with the '?' sign.
+CGI programm - normally with the '?' sign.
 .TP
 .B REMOTE_ADDR
 This refers to the host from which the information request was issued,
@@ -91,7 +91,7 @@ The virtual name of the script being executed.
 .TP
 .B SERVER_NAME
 The server's hostname or ip number.  This may be used to determine the
-correct paths or resulting HTML code for cgi programs that are used on
+correct paths or resulting HTML code for CGI programs that are used on
 the same machine for several servers.
 .TP
 .B SERVER_PROTOCOL
@@ -105,11 +105,12 @@ This refers to the TCP/IP port on which the webserver is running.
 This reflects the name and revision of the webserver software.
 
 .SH "AUTHOR"
-This cgi library is written by Martin Schulze
+This CGI library is written by Martin Schulze
 <joey@infodrom.north.de>.  If you have additions or improvements
 please get in touch with him.
 
 .SH "SEE ALSO"
 .BR cgiDebug (3),
 .BR cgiHeader (3),
-.BR cgiGetValue (3).
+.BR cgiGetValue (3),
+.BR cgiGetVariables (3).
