@@ -1,5 +1,5 @@
-.\" cgiInit - Initializes cgi library
-.\" Copyright (c) 1998  Martin Schulze <joey@infodrom.north.de>
+.\" cgiGetValue - Return the value of a CGI variable
+.\" Copyright (c) 1998,9 by Martin Schulze <joey@infodrom.north.de>
 .\" 
 .\" This program is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
@@ -15,14 +15,14 @@
 .\" along with this program; if not, write to the Free Software
 .\" Foundation, Inc.,59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 .\"
-.TH cgiInit 3 "14 February 1998" "Debian GNU/Linux" "Programmer's Manual"
+.TH cgiGetValue 3 "14 August 1999" "Debian GNU/Linux" "Programmer's Manual"
 .SH NAME
-cgiInit \- Initializes cgi library
+cgiGetValue \- Return the value of a CGI variable
 .SH SYNOPSYS
 .nf
 .B #include <cgi.h>
 .sp
-.BI "char *cgiGetValue(s_cgi **" parms ", const char *" var );
+.BI "char *cgiGetValue (s_cgi **" parms ", const char *" var );
 .fi
 .SH DESCRIPTION
 This routine returns a pointer to the value of a cgi variable.
@@ -40,11 +40,12 @@ On success a pointer to a string is returned.  If the variable wasn't
 transmitted through CGI or was empty NULL is returned.
 
 .SH "AUTHOR"
-This cgi library is written by Martin Schulze
+This CGI library is written by Martin Schulze
 <joey@infodrom.north.de>.  If you have additions or improvements
 please get in touch with him.
 
 .SH "SEE ALSO"
+.BR cgiGetVAriables (3),
 .BR cgiDebug (3),
 .BR cgiHeader (3),
 .BR cgiInit (3).
