@@ -1,5 +1,5 @@
-.\" cgiRedirect - Redirect the browser somewhere else
-.\" Copyright (c) 1998,9 by Martin Schulze <joey@infodrom.north.de>
+.\" cgiGetVariables - Returns a list of CGI variables
+.\" Copyright (c) 1999 by Martin Schulze <joey@infodrom.north.de>
 .\" 
 .\" This program is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
@@ -15,25 +15,43 @@
 .\" along with this program; if not, write to the Free Software
 .\" Foundation, Inc.,59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 .\"
-.TH cgiRedirect 3 "14 August 1999" "Debian GNU/Linux" "Programmer's Manual"
+.TH cgiInit 3 "14 August 1999" "Debian GNU/Linux" "Programmer's Manual"
 .SH NAME
-cgiRedirect \- Redirect the browser somewhere else
+cgiGetVariables \- Returns a list of CGI variables
 .SH SYNOPSYS
 .nf
 .B #include <cgi.h>
 .sp
-.BI "void cgiRedirect (char *" url );
+.BI "char **cgiGetVariables (s_cgi **" parms );
 .fi
 .SH DESCRIPTION
-The
-.B cgiRedirect
-routine redirects the browser to another
-.IR url .
-This mechanism may be useful to redirect invalid requests to some
-static pages describing the policy.
+This routine returns a NULL terminated array of CGI variables that are
+available.  To get the value of a variable you'll have to use
+.BR cgiGetValue (3).
+
+You will have to free the array on your own.  You can use the
+following code fragment:
+.nf
+    char **vars;
+    int i;
+    s_cgi **cgi;
+
+    cgi = cgiInit();
+
+    vars = cgiGetVariables (cgi);
+    if (!vars)
+	return;
+
+    for (i=0; vars[i] != NULL; i++)
+        free (vars[i]);
+	
+    free (vars);
+.fi
+
 .SH "RETURN VALUE"
-.BR cgiRedirect ()
-does not return a value.
+On success a NULL terminated array of strings is returned.  The last
+element is set to NULL.  If an error occurred or if no variables were
+available NULL is returned.
 
 .SH "AUTHOR"
 This CGI library is written by Martin Schulze
@@ -41,5 +59,7 @@ This CGI library is written by Martin Schulze
 please get in touch with him.
 
 .SH "SEE ALSO"
-.BR cgiInit (3),
-.BR cgiHeader (3).
+.BR cgiGetValue (3),
+.BR cgiDebug (3),
+.BR cgiHeader (3),
+.BR cgiInit (3).
