@@ -1,20 +1,43 @@
-To use this library simply include the cgi.h include file with the
-following command in your C programs:
+Using this Library
+------------------
+To use this library you need to include the cgi.h include file with the
+following command into your C programs:
 
-#include <cgi.h>
+   #include <cgi.h>
 
-And add the libcgi.a to the linker either by modifying the LDFLAGS in
-your makefiles or by adding `-lcgi' to the appropriate commandline.
+Additionally you'll have to add the library libcgi.a to the linker,
+either by modifying LDFLAGS in your makefiles or by adding `-lcgi' to
+the appropriate commandline.
+
+Test Suite
+----------
+
+This library comes with a program called cgitest.c.  You can use it as
+reference implementation for this CGI library.  Therefore it should be
+included as source in your distribution.
+
+If you want to test your forms you can use the following action.
+
+   <form action=/cgi-bin/cgitest/listall method=post>
+
+The /listall target will display all environment variables and all CGI
+variables that were transmitted.  This way you can test your
+implementations quite easy.
+
+Further Documentation
+---------------------
 
 
-HTTP Return Codes
+  HTTP Return Codes
 
     http://www.w3.org/Protocols/HTTP/HTRESP.html
 
-HTTP Headers
+  HTTP Headers
 
     http://www.w3.org/Protocols/HTTP/Object_Headers.html
 
+Feedback
+--------
 
 If you have additions, questions or improvements please don't hesitate
 to contact me.
